🐛 fix dark mode

--- a/src/components/Filters/Filters.scss
+++ b/src/components/Filters/Filters.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 48px;
 
-    background-color: white;
+    background-color: var(--card-bg);
 
     border-radius: 5px;
 
