--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -7,6 +7,15 @@
     background-position: top;
     background-repeat: no-repeat;
     background-size: contain;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    & > * {
+        max-width: 540px;
+        width: 100%;
+    }
 }
 
 .light .main {
